--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="6d52b-101">代表图表上的系列。</span><span class="sxs-lookup"><span data-stu-id="6d52b-101">Represents a series in a chart.</span></span>
+      代表图表上的系列。
 
-      <span data-ttu-id="6d52b-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartSeriesLoadOptions
     fullName: Excel.Interfaces.ChartSeriesLoadOptions
     langs:
@@ -29,7 +29,7 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#showShadow:member'
       - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#smooth:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#$all:member'
-    summary: '<span data-ttu-id="6d52b-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="6d52b-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="6d52b-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="6d52b-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="6d52b-105">).</span><span class="sxs-lookup"><span data-stu-id="6d52b-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -42,9 +42,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#chartType:member'
     summary: |-
-      <span data-ttu-id="6d52b-106">表示系列的图表类型。</span><span class="sxs-lookup"><span data-stu-id="6d52b-106">Represents the chart type of a series.</span></span> <span data-ttu-id="6d52b-107">有关详细信息，请参阅 ChartType。</span><span class="sxs-lookup"><span data-stu-id="6d52b-107">See Excel.ChartType for details.</span></span>
+      表示系列的图表类型。 有关详细信息，请参阅 ChartType。
 
-      <span data-ttu-id="6d52b-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
     fullName: chartType
     langs:
@@ -57,9 +57,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#doughnutHoleSize:member'
     summary: |-
-      <span data-ttu-id="6d52b-109">表示图表系列的圆环孔大小。</span><span class="sxs-lookup"><span data-stu-id="6d52b-109">Represents the doughnut hole size of a chart series.</span></span> <span data-ttu-id="6d52b-110">仅对圆环图和分离型圆环图有效。</span><span class="sxs-lookup"><span data-stu-id="6d52b-110">Only valid on doughnut and doughnutExploded charts.</span></span> <span data-ttu-id="6d52b-111">对无效图表引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="6d52b-111">Throws an invalid argument exception on invalid charts.</span></span>
+      表示图表系列的圆环孔大小。 仅对圆环图和分离型圆环图有效。 对无效图表引发无效参数异常。
 
-      <span data-ttu-id="6d52b-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: doughnutHoleSize
     fullName: doughnutHoleSize
     langs:
@@ -72,9 +72,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#filtered:member'
     summary: |-
-      <span data-ttu-id="6d52b-113">该布尔值表示是否筛选系列。</span><span class="sxs-lookup"><span data-stu-id="6d52b-113">Boolean value representing if the series is filtered or not.</span></span> <span data-ttu-id="6d52b-114">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="6d52b-114">Not applicable for surface charts.</span></span>
+      指定是否筛选系列。 不适用于曲面图。
 
-      <span data-ttu-id="6d52b-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
     fullName: filtered
     langs:
@@ -87,9 +87,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="6d52b-116">表示图表系列的格式，包括填充和线条格式。</span><span class="sxs-lookup"><span data-stu-id="6d52b-116">Represents the formatting of a chart series, which includes fill and line formatting.</span></span>
+      表示图表系列的格式，包括填充和线条格式。
 
-      <span data-ttu-id="6d52b-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -102,9 +102,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#gapWidth:member'
     summary: |-
-      <span data-ttu-id="6d52b-118">表示图表系列的间隙宽度。</span><span class="sxs-lookup"><span data-stu-id="6d52b-118">Represents the gap width of a chart series.</span></span> <span data-ttu-id="6d52b-119">仅对条形图和柱形图有效，以及折线图和饼图的特定类。</span><span class="sxs-lookup"><span data-stu-id="6d52b-119">Only valid on bar and column charts, as well as specific classes of line and pie charts.</span></span> <span data-ttu-id="6d52b-120">对无效图表引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="6d52b-120">Throws an invalid argument exception on invalid charts.</span></span>
+      表示图表系列的间隙宽度。 仅对条形图和柱形图有效，以及折线图和饼图的特定类。 对无效图表引发无效参数异常。
 
-      <span data-ttu-id="6d52b-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gapWidth
     fullName: gapWidth
     langs:
@@ -117,9 +117,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#hasDataLabels:member'
     summary: |-
-      <span data-ttu-id="6d52b-122">该布尔值表示系列是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="6d52b-122">Boolean value representing if the series has data labels or not.</span></span>
+      指定该系列是否具有数据标签。
 
-      <span data-ttu-id="6d52b-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
     fullName: hasDataLabels
     langs:
@@ -132,9 +132,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerBackgroundColor:member'
     summary: |-
-      <span data-ttu-id="6d52b-124">表示图表系列的标记背景色。</span><span class="sxs-lookup"><span data-stu-id="6d52b-124">Represents markers background color of a chart series.</span></span>
+      指定图表系列的标记背景色。
 
-      <span data-ttu-id="6d52b-125">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
     fullName: markerBackgroundColor
     langs:
@@ -147,9 +147,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerForegroundColor:member'
     summary: |-
-      <span data-ttu-id="6d52b-126">表示图表系列的标记前景色。</span><span class="sxs-lookup"><span data-stu-id="6d52b-126">Represents markers foreground color of a chart series.</span></span>
+      指定图表系列的标记前景色。
 
-      <span data-ttu-id="6d52b-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
     fullName: markerForegroundColor
     langs:
@@ -162,9 +162,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerSize:member'
     summary: |-
-      <span data-ttu-id="6d52b-128">表示图表系列的标记大小。</span><span class="sxs-lookup"><span data-stu-id="6d52b-128">Represents marker size of a chart series.</span></span>
+      指定图表系列的标记大小。
 
-      <span data-ttu-id="6d52b-129">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-129">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
     fullName: markerSize
     langs:
@@ -177,9 +177,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerStyle:member'
     summary: |-
-      <span data-ttu-id="6d52b-130">表示图表系列的标记类型。</span><span class="sxs-lookup"><span data-stu-id="6d52b-130">Represents marker style of a chart series.</span></span> <span data-ttu-id="6d52b-131">有关详细信息，请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="6d52b-131">See Excel.ChartMarkerStyle for details.</span></span>
+      指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
-      <span data-ttu-id="6d52b-132">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-132">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
     fullName: markerStyle
     langs:
@@ -192,9 +192,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="6d52b-133">表示图表中某个系列的名称。</span><span class="sxs-lookup"><span data-stu-id="6d52b-133">Represents the name of a series in a chart.</span></span>
+      指定图表中系列的名称。
 
-      <span data-ttu-id="6d52b-134">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-134">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -207,9 +207,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#plotOrder:member'
     summary: |-
-      <span data-ttu-id="6d52b-135">表示图表组中某个图表系列的绘制顺序。</span><span class="sxs-lookup"><span data-stu-id="6d52b-135">Represents the plot order of a chart series within the chart group.</span></span>
+      指定图表系列在图表组中的绘制顺序。
 
-      <span data-ttu-id="6d52b-136">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-136">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
     fullName: plotOrder
     langs:
@@ -222,9 +222,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#points:member'
     summary: |-
-      <span data-ttu-id="6d52b-137">表示系列中所有数据点的集合。</span><span class="sxs-lookup"><span data-stu-id="6d52b-137">Represents a collection of all points in the series.</span></span>
+      返回系列中所有数据点的集合。
 
-      <span data-ttu-id="6d52b-138">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-138">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: points
     fullName: points
     langs:
@@ -237,9 +237,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#showShadow:member'
     summary: |-
-      <span data-ttu-id="6d52b-139">表示系列是否具有阴影的布尔值。</span><span class="sxs-lookup"><span data-stu-id="6d52b-139">Boolean value representing if the series has a shadow or not.</span></span>
+      指定系列是否具有阴影。
 
-      <span data-ttu-id="6d52b-140">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-140">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
     fullName: showShadow
     langs:
@@ -252,9 +252,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#smooth:member'
     summary: |-
-      <span data-ttu-id="6d52b-141">该布尔值表示系列是否平滑。</span><span class="sxs-lookup"><span data-stu-id="6d52b-141">Boolean value representing if the series is smooth or not.</span></span> <span data-ttu-id="6d52b-142">仅适用于折线图和散点图。</span><span class="sxs-lookup"><span data-stu-id="6d52b-142">Only applicable to line and scatter charts.</span></span>
+      指定系列是否平滑。 仅适用于折线图和散点图。
 
-      <span data-ttu-id="6d52b-143">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d52b-143">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
     fullName: smooth
     langs:
