--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData:interface'
-    summary: '<span data-ttu-id="596cb-101">一个用于更新 ChartSeries 对象上的数据的接口，可用于`chartSeries.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="596cb-101">An interface for updating data on the ChartSeries object, for use in `chartSeries.set({ ... })`</span></span><!-- --><span data-ttu-id="596cb-102">.</span><span class="sxs-lookup"><span data-stu-id="596cb-102"></span></span>'
+    summary: '一个用于更新 ChartSeries 对象上的数据的接口，可用于`chartSeries.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartSeriesUpdateData
     fullName: Excel.Interfaces.ChartSeriesUpdateData
     langs:
@@ -25,9 +25,9 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesUpdateData#smooth:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#chartType:member'
     summary: |-
-      <span data-ttu-id="596cb-103">表示系列的图表类型。</span><span class="sxs-lookup"><span data-stu-id="596cb-103">Represents the chart type of a series.</span></span> <span data-ttu-id="596cb-104">有关详细信息，请参阅 ChartType。</span><span class="sxs-lookup"><span data-stu-id="596cb-104">See Excel.ChartType for details.</span></span>
+      表示系列的图表类型。 有关详细信息，请参阅 ChartType。
 
-      <span data-ttu-id="596cb-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
     fullName: chartType
     langs:
@@ -40,9 +40,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#chartType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#doughnutHoleSize:member'
     summary: |-
-      <span data-ttu-id="596cb-106">表示图表系列的圆环孔大小。</span><span class="sxs-lookup"><span data-stu-id="596cb-106">Represents the doughnut hole size of a chart series.</span></span> <span data-ttu-id="596cb-107">仅对圆环图和分离型圆环图有效。</span><span class="sxs-lookup"><span data-stu-id="596cb-107">Only valid on doughnut and doughnutExploded charts.</span></span> <span data-ttu-id="596cb-108">对无效图表引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="596cb-108">Throws an invalid argument exception on invalid charts.</span></span>
+      表示图表系列的圆环孔大小。 仅对圆环图和分离型圆环图有效。 对无效图表引发无效参数异常。
 
-      <span data-ttu-id="596cb-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: doughnutHoleSize
     fullName: doughnutHoleSize
     langs:
@@ -55,9 +55,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#filtered:member'
     summary: |-
-      <span data-ttu-id="596cb-110">该布尔值表示是否筛选系列。</span><span class="sxs-lookup"><span data-stu-id="596cb-110">Boolean value representing if the series is filtered or not.</span></span> <span data-ttu-id="596cb-111">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="596cb-111">Not applicable for surface charts.</span></span>
+      指定是否筛选系列。 不适用于曲面图。
 
-      <span data-ttu-id="596cb-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
     fullName: filtered
     langs:
@@ -70,9 +70,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="596cb-113">表示图表系列的格式，包括填充和线条格式。</span><span class="sxs-lookup"><span data-stu-id="596cb-113">Represents the formatting of a chart series, which includes fill and line formatting.</span></span>
+      表示图表系列的格式，包括填充和线条格式。
 
-      <span data-ttu-id="596cb-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -85,9 +85,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gapWidth:member'
     summary: |-
-      <span data-ttu-id="596cb-115">表示图表系列的间隙宽度。</span><span class="sxs-lookup"><span data-stu-id="596cb-115">Represents the gap width of a chart series.</span></span> <span data-ttu-id="596cb-116">仅对条形图和柱形图有效，以及折线图和饼图的特定类。</span><span class="sxs-lookup"><span data-stu-id="596cb-116">Only valid on bar and column charts, as well as specific classes of line and pie charts.</span></span> <span data-ttu-id="596cb-117">对无效图表引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="596cb-117">Throws an invalid argument exception on invalid charts.</span></span>
+      表示图表系列的间隙宽度。 仅对条形图和柱形图有效，以及折线图和饼图的特定类。 对无效图表引发无效参数异常。
 
-      <span data-ttu-id="596cb-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gapWidth
     fullName: gapWidth
     langs:
@@ -100,9 +100,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#hasDataLabels:member'
     summary: |-
-      <span data-ttu-id="596cb-119">该布尔值表示系列是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="596cb-119">Boolean value representing if the series has data labels or not.</span></span>
+      指定该系列是否具有数据标签。
 
-      <span data-ttu-id="596cb-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
     fullName: hasDataLabels
     langs:
@@ -115,9 +115,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerBackgroundColor:member'
     summary: |-
-      <span data-ttu-id="596cb-121">表示图表系列的标记背景色。</span><span class="sxs-lookup"><span data-stu-id="596cb-121">Represents markers background color of a chart series.</span></span>
+      指定图表系列的标记背景色。
 
-      <span data-ttu-id="596cb-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
     fullName: markerBackgroundColor
     langs:
@@ -130,9 +130,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerForegroundColor:member'
     summary: |-
-      <span data-ttu-id="596cb-123">表示图表系列的标记前景色。</span><span class="sxs-lookup"><span data-stu-id="596cb-123">Represents markers foreground color of a chart series.</span></span>
+      指定图表系列的标记前景色。
 
-      <span data-ttu-id="596cb-124">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
     fullName: markerForegroundColor
     langs:
@@ -145,9 +145,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerSize:member'
     summary: |-
-      <span data-ttu-id="596cb-125">表示图表系列的标记大小。</span><span class="sxs-lookup"><span data-stu-id="596cb-125">Represents marker size of a chart series.</span></span>
+      指定图表系列的标记大小。
 
-      <span data-ttu-id="596cb-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
     fullName: markerSize
     langs:
@@ -160,9 +160,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerStyle:member'
     summary: |-
-      <span data-ttu-id="596cb-127">表示图表系列的标记类型。</span><span class="sxs-lookup"><span data-stu-id="596cb-127">Represents marker style of a chart series.</span></span> <span data-ttu-id="596cb-128">有关详细信息，请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="596cb-128">See Excel.ChartMarkerStyle for details.</span></span>
+      指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
-      <span data-ttu-id="596cb-129">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-129">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
     fullName: markerStyle
     langs:
@@ -175,9 +175,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="596cb-130">表示图表中某个系列的名称。</span><span class="sxs-lookup"><span data-stu-id="596cb-130">Represents the name of a series in a chart.</span></span>
+      指定图表中系列的名称。
 
-      <span data-ttu-id="596cb-131">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-131">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -190,9 +190,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#plotOrder:member'
     summary: |-
-      <span data-ttu-id="596cb-132">表示图表组中某个图表系列的绘制顺序。</span><span class="sxs-lookup"><span data-stu-id="596cb-132">Represents the plot order of a chart series within the chart group.</span></span>
+      指定图表系列在图表组中的绘制顺序。
 
-      <span data-ttu-id="596cb-133">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-133">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
     fullName: plotOrder
     langs:
@@ -205,9 +205,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#showShadow:member'
     summary: |-
-      <span data-ttu-id="596cb-134">表示系列是否具有阴影的布尔值。</span><span class="sxs-lookup"><span data-stu-id="596cb-134">Boolean value representing if the series has a shadow or not.</span></span>
+      指定系列是否具有阴影。
 
-      <span data-ttu-id="596cb-135">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-135">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
     fullName: showShadow
     langs:
@@ -220,9 +220,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#smooth:member'
     summary: |-
-      <span data-ttu-id="596cb-136">该布尔值表示系列是否平滑。</span><span class="sxs-lookup"><span data-stu-id="596cb-136">Boolean value representing if the series is smooth or not.</span></span> <span data-ttu-id="596cb-137">仅适用于折线图和散点图。</span><span class="sxs-lookup"><span data-stu-id="596cb-137">Only applicable to line and scatter charts.</span></span>
+      指定系列是否平滑。 仅适用于折线图和散点图。
 
-      <span data-ttu-id="596cb-138">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="596cb-138">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
     fullName: smooth
     langs:
