--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.iterativecalculationloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.iterativecalculationloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="2bc65-101">表示迭代计算设置。</span><span class="sxs-lookup"><span data-stu-id="2bc65-101">Represents the Iterative Calculation settings.</span></span>
+      表示迭代计算设置。
 
-      <span data-ttu-id="2bc65-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bc65-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.IterativeCalculationLoadOptions
     fullName: Excel.Interfaces.IterativeCalculationLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.IterativeCalculationLoadOptions#maxChange:member'
       - 'excel!Excel.Interfaces.IterativeCalculationLoadOptions#maxIteration:member'
   - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions#$all:member'
-    summary: '<span data-ttu-id="2bc65-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="2bc65-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="2bc65-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="2bc65-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="2bc65-105">).</span><span class="sxs-lookup"><span data-stu-id="2bc65-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions#enabled:member'
     summary: |-
-      <span data-ttu-id="2bc65-106">如果 Excel 使用迭代来处理循环引用，则为 True。</span><span class="sxs-lookup"><span data-stu-id="2bc65-106">True if Excel will use iteration to resolve circular references.</span></span>
+      如果 Excel 使用迭代来处理循环引用，则为 True。
 
-      <span data-ttu-id="2bc65-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bc65-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enabled
     fullName: enabled
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions#maxChange:member'
     summary: |-
-      <span data-ttu-id="2bc65-108">返回或设置 Excel 处理循环引用时迭代之间的最大变化值。</span><span class="sxs-lookup"><span data-stu-id="2bc65-108">Returns or sets the maximum amount of change between each iteration as Excel resolves circular references.</span></span>
+      指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
 
-      <span data-ttu-id="2bc65-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bc65-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxChange
     fullName: maxChange
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions#maxIteration:member'
     summary: |-
-      <span data-ttu-id="2bc65-110">返回或设置 Excel 处理循环引用的最大迭代次数。</span><span class="sxs-lookup"><span data-stu-id="2bc65-110">Returns or sets the maximum number of iterations that Excel can use to resolve a circular reference.</span></span>
+      指定 Excel 可用于解析循环引用的最大迭代次数。
 
-      <span data-ttu-id="2bc65-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bc65-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxIteration
     fullName: maxIteration
     langs:
