--- a/docs/docs-ref-autogen/onenote/onenote/onenote.notebookcollection.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.notebookcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'onenote!OneNote.NotebookCollection:class'
     summary: |-
-      <span data-ttu-id="a1b77-101">表示笔记本的集合。</span><span class="sxs-lookup"><span data-stu-id="a1b77-101">Represents a collection of notebooks.</span></span>
+      表示笔记本的集合。
 
-      <span data-ttu-id="a1b77-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a1b77-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.NotebookCollection
     fullName: OneNote.NotebookCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.NotebookCollection#context:member'
@@ -27,7 +27,7 @@ items:
       - 'onenote!OneNote.NotebookCollection#track:member(1)'
       - 'onenote!OneNote.NotebookCollection#untrack:member(1)'
   - uid: 'onenote!OneNote.NotebookCollection#context:member'
-    summary: <span data-ttu-id="a1b77-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="a1b77-103">The request context associated with the object.</span></span> <span data-ttu-id="a1b77-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="a1b77-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -40,9 +40,9 @@ items:
           - 'onenote!OneNote.RequestContext:class'
   - uid: 'onenote!OneNote.NotebookCollection#count:member'
     summary: |-
-      <span data-ttu-id="a1b77-105">返回集合中笔记本的数目。</span><span class="sxs-lookup"><span data-stu-id="a1b77-105">Returns the number of notebooks in the collection.</span></span> <span data-ttu-id="a1b77-106">只读。</span><span class="sxs-lookup"><span data-stu-id="a1b77-106">Read-only.</span></span>
+      返回集合中笔记本的数目。 只读。
 
-      <span data-ttu-id="a1b77-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a1b77-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -55,9 +55,9 @@ items:
           - number
   - uid: 'onenote!OneNote.NotebookCollection#getByName:member(1)'
     summary: |-
-      <span data-ttu-id="a1b77-108">获取在应用程序实例中打开的指定名称的笔记本集合。</span><span class="sxs-lookup"><span data-stu-id="a1b77-108">Gets the collection of notebooks with the specified name that are open in the application instance.</span></span>
+      获取在应用程序实例中打开的指定名称的笔记本集合。
 
-      <span data-ttu-id="a1b77-109">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a1b77-109">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: getByName(name)
     fullName: getByName(name)
     langs:
@@ -71,7 +71,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="a1b77-110">示例</span><span class="sxs-lookup"><span data-stu-id="a1b77-110">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           OneNote.run(function (context) {
@@ -105,14 +105,14 @@ items:
           ```
       parameters:
         - id: name
-          description: <span data-ttu-id="a1b77-111">笔记本的名称。</span><span class="sxs-lookup"><span data-stu-id="a1b77-111">The name of the notebook.</span></span>
+          description: 笔记本的名称。
           type:
             - string
   - uid: 'onenote!OneNote.NotebookCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="a1b77-112">按其在集合中的 ID 或索引获取笔记本。</span><span class="sxs-lookup"><span data-stu-id="a1b77-112">Gets a notebook by ID or by its index in the collection.</span></span> <span data-ttu-id="a1b77-113">只读。</span><span class="sxs-lookup"><span data-stu-id="a1b77-113">Read-only.</span></span>
+      按其在集合中的 ID 或索引获取笔记本。 只读。
 
-      <span data-ttu-id="a1b77-114">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a1b77-114">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: getItem(index)
     fullName: getItem(index)
     langs:
@@ -126,14 +126,14 @@ items:
         description: ''
       parameters:
         - id: index
-          description: '<span data-ttu-id="a1b77-115">笔记本的 ID 或集合中笔记本的索引位置。</span><span class="sxs-lookup"><span data-stu-id="a1b77-115">The ID of the notebook, or the index location of the notebook in the collection.</span></span>'
+          description: 笔记本的 ID 或集合中笔记本的索引位置。
           type:
             - number | string
   - uid: 'onenote!OneNote.NotebookCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="a1b77-116">按其在集合中的位置获取笔记本。</span><span class="sxs-lookup"><span data-stu-id="a1b77-116">Gets a notebook on its position in the collection.</span></span>
+      按其在集合中的位置获取笔记本。
 
-      <span data-ttu-id="a1b77-117">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a1b77-117">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -147,11 +147,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="a1b77-118">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="a1b77-118">Index value of the object to be retrieved.</span></span> <span data-ttu-id="a1b77-119">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="a1b77-119">Zero-indexed.</span></span>
+          description: 要检索的对象的索引值。 从零开始编制索引。
           type:
             - number
   - uid: 'onenote!OneNote.NotebookCollection#items:member'
-    summary: <span data-ttu-id="a1b77-120">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="a1b77-120">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -163,15 +163,15 @@ items:
         type:
           - 'onenote!OneNote.NotebookCollection#items~0:complex'
   - uid: 'onenote!OneNote.NotebookCollection#load:member(1)'
-    summary: <span data-ttu-id="a1b77-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a1b77-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a1b77-122">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="a1b77-122">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="a1b77-123">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="a1b77-123">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="a1b77-124">`load(option?: string | string[]): OneNote.NotebookCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a1b77-124">`load(option?: string | string[]): OneNote.NotebookCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): OneNote.NotebookCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="a1b77-125">`load(option?: { select?: string; expand?: string; }): OneNote.NotebookCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a1b77-125">`load(option?: { select?: string; expand?: string; }): OneNote.NotebookCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): OneNote.NotebookCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="a1b77-126">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.NotebookCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="a1b77-126">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.NotebookCollection` - Only available on collection types.</span></span> <span data-ttu-id="a1b77-127">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="a1b77-127">It is similar to the preceding signature.</span></span> <span data-ttu-id="a1b77-128">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="a1b77-128">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="a1b77-129">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="a1b77-129">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="a1b77-130">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="a1b77-130">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.NotebookCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -189,7 +189,7 @@ items:
           type:
             - 'onenote!OneNote.NotebookCollection#load~0:complex'
   - uid: 'onenote!OneNote.NotebookCollection#load:member(2)'
-    summary: <span data-ttu-id="a1b77-131">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a1b77-131">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a1b77-132">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a1b77-132">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -203,7 +203,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="a1b77-133">示例</span><span class="sxs-lookup"><span data-stu-id="a1b77-133">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           OneNote.run(function (context) {
@@ -239,7 +239,7 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="a1b77-134">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a1b77-134">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'onenote!OneNote.NotebookCollection#load:member(3)'
@@ -258,9 +258,9 @@ items:
         - id: option
           description: ''
           type:
-            - 'onenote!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'onenote!OneNote.NotebookCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="a1b77-135">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="a1b77-135">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="a1b77-136">.</span><span class="sxs-lookup"><span data-stu-id="a1b77-136"></span></span> <span data-ttu-id="a1b77-137">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="a1b77-137"></span></span><!-- --><span data-ttu-id="a1b77-138">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`OneNote.NotebookCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.NotebookCollectionData`</span><span class="sxs-lookup"><span data-stu-id="a1b77-138">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `OneNote.NotebookCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `OneNote.Interfaces.NotebookCollectionData`</span></span><!-- --><span data-ttu-id="a1b77-139">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="a1b77-139">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`OneNote.NotebookCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.NotebookCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -273,7 +273,7 @@ items:
           - 'onenote!OneNote.Interfaces.NotebookCollectionData:interface'
         description: ''
   - uid: 'onenote!OneNote.NotebookCollection#track:member(1)'
-    summary: '<span data-ttu-id="a1b77-140">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="a1b77-140">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="a1b77-141">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="a1b77-141">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="a1b77-142">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="a1b77-142">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -286,7 +286,7 @@ items:
           - 'onenote!OneNote.NotebookCollection:class'
         description: ''
   - uid: 'onenote!OneNote.NotebookCollection#untrack:member(1)'
-    summary: '<span data-ttu-id="a1b77-143">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="a1b77-143">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="a1b77-144">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="a1b77-144">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="a1b77-145">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="a1b77-145">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="a1b77-146">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="a1b77-146">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
@@ -299,7 +299,7 @@ items:
           - 'onenote!OneNote.NotebookCollection:class'
         description: ''
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.RequestContext:class'
     name: RequestContext
@@ -328,7 +328,7 @@ references:
       - uid: 'onenote!OneNote.Interfaces.CollectionLoadOptions:interface'
         name: OneNote.Interfaces.CollectionLoadOptions
         fullName: OneNote.Interfaces.CollectionLoadOptions
-  - uid: 'onenote!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'onenote!OneNote.Interfaces.NotebookCollectionData:interface'
     name: OneNote.Interfaces.NotebookCollectionData
